# fsd

./: .gitignore  AZURE_INFRA.md  BUGS.md  CHANGES.md  CONTEXT.md  DROPPED.md  LIMITATIONS.md  PROGRESS.md  README.md  RECIPES.md  ROADMAP.md  RSLEARN_COMPARISON.md  TODO.md  pyproject.toml
benchmarks/: cog_vs_jp2_report.md  cog_vs_jp2_storage.json  cog_vs_jp2_storage.md  compare_cog_jp2.py  datacube_report_2018_ethiopia.md  datacube_throughput_report.md  datacube_throughput_stats.json  datacube_throughput_stats_cog.json  datacube_throughput_stats_jp2.json  datacube_throughput_sweep.py  datacube_year_ethiopia.py  datacube_year_ethiopia_plots.py  datacube_year_ethiopia_stats.json  download_report_2018_ethiopia.md  download_year_ethiopia.py  download_year_ethiopia_stats.json  eurocrops_year_build.py  eurocrops_year_report.md  eurocrops_year_report.py  migrate_jp2_to_cog.py  prep_cog_dataset.py
demos/: E2E_AUSTRIA.md  README.md  TITILER_LEAFLET.md  adapters.py  e2e_austria.py  e2e_ethiopia.py  estimate.py  regen_output_stac.py  titiler_serve.py
demos/mini_mpc/: .env.example  README.md  docker-compose.yml  export_stac_geoparquet.py  load_pgstac.py  register_and_url.py
demos/mini_mpc/dockerfiles/: Dockerfile.stac-fastapi-pgstac  Dockerfile.titiler-pgstac
docs/: adding-a-source.md
docs/adr/: 0001-remote-cog-publish-in-to-cog.md  0002-bundle-and-inference-image-decoupled.md
examples/: eurocrops_rf.py
notebooks/: README.md
runbooks/: 26-download-confirm-run.md  27-austria-full-e2e.md  28-stac-geometry-regen.md  29-tier1-stacnotator-byo.md  30-tier2-mini-mpc.md  31-p1-access-probe.md  31-p1-datacube-on-blob.md  31-p1-upload-slice.md  32-mpc-baseline.md  33-mpc-dedup-live.md  34-download-to-blob.md  34-mini-mpc-cross-baseline.md  36-aml-runner.md  36-phase0-identity-smoke.md  36-runner-fork-probe.md  37-download-on-aml.md  37-verify-archive.md  38-inference-on-aml.md  HANDOFF-spec34-A1-implement.md  HANDOFF-spec34-runbooks.md  HANDOFF-spec35-implement.md  TEMPLATE.md
runbooks/scripts/: 31_datacube_on_blob.py  31_upload_slice.py  33_probe_dedup.py  34_download_to_blob.py  34_mixed_baseline_slice.py
specs/: 00-overview.md  01-sources.md  02-catalog.md  03-datacube.md  04-datacube-ops.md  05-flatten.md  06-bands.md  07-raster.md  08-workflows.md  09-notebooks.md  10-storage-and-scale.md  11-benchmark-throughput-sweep.md  12-benchmark-read-instrumentation.md  13-cog-vs-jp2-experiment.md  14-cog-on-download.md  15-calendar-mosaic.md  16-packaging-and-api.md  17-stac-catalog.md  18-model-adapter.md  18-model-bundle-explainer.md  19-e2e-demo.md  20-datacube-tile-merge-bug.md  21-roi-inference-verb.md  22-unify-inference-runner.md  23-e2e-austria-local-gate.md  24-working-contract.md  25-download-convert-redesign.md  25b-pipeline-exception-safety.md  26-safe-download-runner.md  27-titiler-leaflet-stac-verify.md  28-stac-output-geometry-fix.md  29-tier1-prestyled-xyz-validation.md  30-tier2-mini-mpc-validation.md  31-p1-azure-storage-seam.md  32-mpc-source-baseline-harmonization.md  33-mpc-reprocessing-dedup.md  34-ingest-normalization-contract.md  35-declaration-persistence.md  36-scale-runner.md  37-download-on-aml.md  (+2 more)
spike/: README.md
src/fsd/: __init__.py  api.py  config.py  grid.py  secrets.py
src/fsd/bands/: __init__.py  modify.py
src/fsd/catalog/: __init__.py  catalog.py  declaration.py  inspect_cli.py  restamp_cli.py  stac.py  stac_geoparquet.py
src/fsd/datacube/: __init__.py  builder.py  flatten.py  ops.py
src/fsd/model/: __init__.py  adapter.py  bundle.py  engine.py  features.py
src/fsd/raster/: __init__.py  cog.py  images.py
src/fsd/sources/: __init__.py  _s2_radiometry.py  cdse.py  download_cli.py  mpc.py
src/fsd/storage/: __init__.py  azure.py  fs.py
src/fsd/workflows/: __init__.py  adapter_smoke.py  create_datacube.py  download.py  infer_only_task.py  infer_shard.py  infer_task.py  runners.py  shard.py  task.py
src/fsd/workflows/_snakefiles/create_datacube/: Snakefile
src/fsd/workflows/_snakefiles/create_inference/: Snakefile
src/fsd/workflows/_snakefiles/infer_only/: Snakefile
tests/: test_api.py  test_api_roi.py  test_azure_seam.py  test_bands.py  test_benchmark_throughput.py  test_catalog.py  test_catalog_stac.py  test_cdse.py  test_datacube_builder.py  test_datacube_flatten.py  test_datacube_ops.py  test_declaration.py  test_download_aml.py  test_download_cli.py  test_estimate.py  test_grid.py  test_infer_aml.py  test_model.py  test_mpc.py  test_prep_cog.py  test_raster.py  test_restamp_cli.py  test_scaffold.py  test_scale_runner.py  test_stac_geoparquet.py  test_storage.py  test_titiler_serve.py  test_workflows.py
tests/manual/: README.md  cog_download.md  cog_experiment.md  datacube.md  debug_s3paths.md  deploy.md  flatten.md  realdata.md  roi_inference.md  storage.md  throughput_benchmark.md
