[project]
name = "fsd"
version = "0.1.0"
description = "Fetch satellite tiles and build datacubes (clean rewrite). Sentinel-2 L2A via CDSE; cloud-agnostic by design."
authors = [{ name = "Nikhil Sasi Rajan", email = "nsasiraj@umd.edu" }]
readme = "README.md"
requires-python = ">=3.11"

# Core deps only. Plotting/sklearn live in the [notebooks] extra; Azure backends
# live in the [azure] extra (Phase 2). See specs/09-notebooks.md.
dependencies = [
    "numpy",
    "pandas",
    "geopandas",
    "shapely",
    "rasterio",
    "pyarrow",        # GeoParquet catalog
    "fsspec",         # storage seam (specs/10)
    "s3fs",           # S3-compatible transport (any endpoint: AWS, CDSE EODATA, MinIO)
    "pystac",         # STAC export view of the tile catalog (specs/17)
    "pystac-client",  # CDSE STAC catalog discovery (anonymous; replaces sentinelhub)
    "numba",          # median-mosaic kernel
    "snakemake",      # local runner only (specs/08)
    "tqdm",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib",
    "seaborn",
    "ipywidgets",
    "scikit-learn",
    "joblib",
]
model-example = [  # for examples/eurocrops_rf.py + tests/manual/deploy.md + demos/ (not fsd core)
    "scikit-learn",
    "joblib",
    "matplotlib",
    "seaborn",
]
grid = [           # ROI → S2-grid tiling (fsd.grid); optional so core stays lean (spec 19)
    "s2",
    "s2cell",
]
azure = [          # Phase 2, not used in v1 code
    "adlfs",       # fsspec Azure Blob backend
]
titiler = [        # P5 serving validation (spec 29 Tier 1; grows for Tier 2). NOT fsd core.
    "rio-tiler>=6,<8",       # the COG tile read + render (the pre-styled route)
    "fastapi",               # the app
    "uvicorn[standard]",     # ASGI server
    # titiler.core / titiler.mosaic are added in Tier 2 (pgSTAC); Tier 1 needs only rio-tiler.
]
serving = [        # P5 serving Tier 2 (spec 30): stac-geoparquet export. NOT fsd core.
    "stac-geoparquet",
]
dev = [
    "ruff",
    "pytest",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fsd" = ["workflows/_snakefiles/**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit the network (CDSE/S3); opt-in",
]
